added teaser heading

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Naeem Hussain</title>
+		<link rel="stylesheet" href="font/stylesheet.css">
+		<link rel="stylesheet" href="assets/css/style.css">
+		<script defer src="assets/js/script.js"></script>
 	</head>
 	<body>
-		<h1>Welcome</h1>
+		<h1>&ltnnh<span class="blink">_</span></h1>
 	</body>
 </html>
