--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 		<script defer src="assets/js/script.js"></script>
 	</head>
 	<body>
-		<h1 class="logo">nnh&gt;</h1>
+		<h1 class="logo">nnh&gt;<input type="text"><span class="cursor"></span></h1>
 	</body>
 </html>
