form for search

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 		<script defer src="assets/js/script.js"></script>
 	</head>
 	<body>
-		<h1 class="logo">nnh&gt;<input type="text"><span class="cursor"></span></h1>
+		<h1 class="logo">
+			nnh&gt;
+			<form action="/" method="get">
+				<input type="text">
+			</form>
+			<span class="cursor"></span>
+		</h1>
 	</body>
 </html>
