--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Naeem Hussain</title>
-		<link rel="stylesheet" href="font/stylesheet.css" />
-		<link rel="stylesheet" href="assets/css/style.css" />
-		<script defer src="assets/js/script.js"></script>
-	</head>
-	<body>
-		<h1 class="logo">
-			nnh&gt;
-			<form action="/" method="get">
-				<input type="text">
-			</form>
-			<span class="cursor"></span>
-		</h1>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Naeem Hussain</title>
+    <link rel="stylesheet" href="font/stylesheet.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script defer src="assets/js/script.js"></script>
+  </head>
+  <body>
+    <h1 class="logo">nnh&gt;</h1>
+    <form action="/" method="get">
+      <input type="text" />
+    </form>
+    <span class="cursor">&nbsp;</span>
+  </body>
 </html>
